# jigsaw-puzzle

./: .gitignore  .lfsconfig  LICENSE-APACHE  LICENSE-MIT  README.md  index.html
.github/workflows/: build.yml
backend/jigsaw-puzzle-worker/: Cargo.toml  wrangler.toml
backend/jigsaw-puzzle-worker/src/: lib.rs
cli/: Cargo.toml
cli/media/: pieces.json
cli/src/: config.rs  info.rs  main.rs  read.rs  write.rs
frontend/: Cargo.toml  cors.js  package.json  rollup.dev.js  rollup.prod.js  rust-toolchain.toml  sync.sh
frontend/public/: index.html  styles.css
frontend/public/media/: picker-fragment.glsl  picker-vertex.glsl  vertex.glsl
frontend/public/media/puzzle/landscape/: pieces.json  spritesheet.json
frontend/src/: animation.rs  buffers.rs  camera.rs  config.rs  controller.rs  dom.rs  evaluate.rs  init.rs  lib.rs  mainloop.rs  media.rs  pieces.rs  prelude.rs  renderer.rs  reset.rs  setup.rs  start.rs  websocket.rs  world.rs
frontend/src/controller/: helpers.rs  listeners.rs  queue.rs
frontend/src/dom/: canvas.rs  theme.rs  ui.rs
frontend/src/dom/ui/: dom.rs  state.rs  strings.rs  styles.rs
frontend/src/pieces/: distribute.rs
frontend/src/renderer/: item.rs  picker.rs  spritesheet.rs
frontend/src/shaders/: forward-fragment.glsl  forward-vertex.glsl  outline-fragment.glsl  picker-fragment.glsl  piece-fragment.glsl  piece-vertex.glsl  quad-vertex.glsl
media/puzzle/landscape/: puzzle.json
wasm/: index.js  index.js.map
wasm/assets/: demo-c5e50172.wasm
